--- a/01/01/cv/index.html
+++ b/01/01/cv/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=qwert12345, initial-scale=1.0" />
     <title>엘리스토끼이력서</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Pen+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -22,40 +29,43 @@
         <h2>김대운</h2>
         <img src="./IMG_2314.JPG" alt="img" width="300" />
       </section>
-      <section>
-        <h3>인적사항</h3>
-        <p>
-          <strong>생년월일 : </strong> 1997.04.19 | B형 <br />
-          <strong>주소 : </strong> 청주시 <br />
-          <strong>연락처 :</strong> eodnsdlekd@naver.com | 010.3215. <br />
-        </p>
-      </section>
-      <section>
-        <h3 id="study">학력사항</h3>
-        <ul>
-          <li>2010~2013</li>
-          <li>2016</li>
-          <li>2016.03</li>
-        </ul>
-      </section>
 
-      <section>
-        <h3>경력사항</h3>
-        <ol>
-          <li>한국</li>
-          <li>엘리스</li>
-          <li>트랙</li>
-        </ol>
-      </section>
+      <div>
+        <section>
+          <h3>인적사항</h3>
+          <p>
+            <strong>생년월일 : </strong> 1997.04.19 | B형 <br />
+            <strong>주소 : </strong> 청주시 <br />
+            <strong>연락처 :</strong> eodnsdlekd@naver.com | 010.3215. <br />
+          </p>
+        </section>
+        <section>
+          <h3 id="study">학력사항</h3>
+          <ul>
+            <li>2010~2013</li>
+            <li>2016</li>
+            <li>2016.03</li>
+          </ul>
+        </section>
 
-      <section>
-        <h3>보유스킬</h3>
-        <ul>
-          <li><a href="#">HTML</a></li>
-          <li><a href="#">HTML</a></li>
-          <li><a href="#">HTML</a></li>
-        </ul>
-      </section>
+        <section>
+          <h3>경력사항</h3>
+          <ol>
+            <li>한국</li>
+            <li>엘리스</li>
+            <li>트랙</li>
+          </ol>
+        </section>
+
+        <section>
+          <h3>보유스킬</h3>
+          <ul>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">HTML</a></li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer>Author by : 엘리스 토끼</footer>
   </body>
