--- a/02/01/culculator.html
+++ b/02/01/culculator.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>계산기</title>
   </head>
   <body>
     <h1>계산기</h1>
-    <input type="text" placeholder="숫자와 연산을 입력하시오." />
+    <input type="text" placeholder="숫자와 연산을 입력하시오. ex) 1+3" />
     <button
       onclick="
       var num = document.querySelector('input').value.split(/[^0-9]/g).filter(a=> a!='');
